--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <script src="main.js" type="text/javascript"></script>
 </head>
-<body>
+<body id="rps-body" class="page-wrapper">
+    <div class="page-header">
+        <nav>
+            <h1>Rock Paper Scissors</h1>
+        </nav>
+    </div>
 
-    <div class="wrapper">
+    <main class="page-content">
+
+        <div class="scoreboard-wrapper">
+            <div id="away" class="score">
+                <div id="user-label" class="badge">Away Team</div>
+                <div class="score-num-wrapper">
+                    <span id="user-score">0</span>
+                </div>
+            </div>
+            <div id="home" class="score">
+                <div id="computer-label" class="badge">Home Team</div>
+                <div class="score-num-wrapper">
+                    <span id="computer-score">0</span>
+                </div>
+            </div>
+        </div>
+        <div class="choices-wrapper">
+            <h1>Choose your fighter</h1>
+            <div class="choices">
+                <div class="choice-wrap">
+                    <div class="button" id="rock">
+                        <i class="fas fa-hand-rock fa-5x"></i>
+                    </div>
+                </div>
+                <div class="button" id="paper">
+                    <i class="fas fa-hand-paper fa-5x"></i>
+                </div>
+                <div class="button" id="scissors">
+                    <i class="fas fa-hand-scissors fa-5x"></i>
+                </div>
+            </div>
+        </div>
+        <div class="action-message-wrapper"></div>
+        <div class="reset-wrapper"></div>
+
+
+    </main>
+
+    <!-- <div class="wrapper">
         <div class="container">
             <h1>Rock Paper Scissors</h1>
             <div class="scoreboard">
@@ -21,21 +66,21 @@
             <p>Choose your fighter</p>
             <div class="choices">
                 <div class="button" id="rock">
-                    Rock
+                    <i class="fas fa-hand-rock"></i>
                 </div>
                 <div class="button" id="paper">
-                    Paper
+                    <i class="fas fa-hand-paper"></i>
                 </div>
                 <div class="button" id="scissors">
-                    Scissors
+                    <i class="fas fa-hand-scissors"></i>
                 </div>
             </div>
             <div id="action-message">Make your move</div>
             <div class="reset button">
-                Reset
+                <i class="fas fa-sync"></i>
             </div>
         </div>
-    </div>
+    </div> -->
     
 </body>
 </html>
