--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body id="rps-body" class="page-wrapper">
-    <div class="page-header">
-        <nav>
-            <h1>Rock Paper Scissors</h1>
-        </nav>
+    <div id="landing" class="landing-page">
+        <div class="landing-title">
+            <span class="landing-word">Rock</span>
+            <span class="landing-word">Paper</span>
+            <span class="landing-word">Scissors</span>
+        </div>
+        <div class="button" id="start-game">
+            Let's Play
+        </div>
     </div>
 
-    <main id="game" class="page-content">
+    <main id="game" class="page-content hidden">
 
         <div id="scoreboard" class="scoreboard-wrapper">
             <div id="away" class="score">
@@ -53,20 +58,18 @@
             </div>
         </div>
         <div id="result-message" class="action-message-wrapper"></div>
-        <div class="reset-wrapper">
-            <div class="button" id="reset">
-                <i class="fas fa-undo fa-3x"></i>
-            </div>
-        </div>
 
 
     </main>
 
-    <div id="game-over" style="display: none;">
-        <h1>Game Over</h1>
+    <div id="game-over" class="hidden landing-page">
+        <div class="landing-title">
+            <span class="landing-word">Game</span>
+            <span class="landing-word">Over</span>
+        </div>
         <p id="game-over-message"></p>
-        <div class="button" id="restart">
-            <i class="fas fa-redo fa-3x"></i>
+        <div class="button" id="restart-game">
+            Rematch
         </div>
     </div>
     <script src="main.js" type="text/javascript"></script>
