--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <div id="landing" class="landing-page">
         <div class="landing-title">
-            <span class="landing-word">Rock</span>
-            <span class="landing-word">Paper</span>
-            <span class="landing-word">Scissors</span>
+            <span class="pallet-highlight">Rock</span>
+            <span class="pallet-highlight">Paper</span>
+            <span class="pallet-highlight">Scissors</span>
         </div>
         <div class="button" id="start-game">
             Let's Play
@@ -30,24 +30,28 @@
     </div>
 
     <main id="game" class="page-content hidden">
-
+        <h1 class="game-title">
+            <span class="pallet-highlight">Rock</span>
+            <span class="pallet-highlight">Paper</span>
+            <span class="pallet-highlight">Scissors</span>
+        </h1>
         <div id="scoreboard" class="scoreboard-wrapper">
             <div id="away" class="score">
-                <div id="user-label" class="badge"><i class="fas fa-user"></i></div>
+                <div id="user-label" class="badge"><i class="fas fa-user pallet-highlight"></i></div>
                 <div class="score-num-wrapper">
-                    <span id="user-score" class="game-score">0</span>
+                    <span id="user-score" class="game-score pallet-highlight">0</span>
                 </div>
                 <div class="choice-icon">
-                    <i id="user-choice" class="fas fa-question"></i>
+                    <i id="user-choice" class="fas fa-question pallet-highlight"></i>
                 </div>
             </div>
             <div id="home" class="score">
-                <div id="computer-label" class="badge"><i class="fas fa-robot"></i></div>
+                <div id="computer-label" class="badge"><i class="fas fa-robot pallet-highlight"></i></div>
                 <div class="score-num-wrapper">
-                    <span id="computer-score" class="game-score">0</span>
+                    <span id="computer-score" class="game-score pallet-highlight">0</span>
                 </div>
                 <span class="choice-icon">
-                    <i id="computer-choice" class="fas fa-question"></i>
+                    <i id="computer-choice" class="fas fa-question pallet-highlight"></i>
                 </span>
             </div>
         </div>
@@ -74,8 +78,8 @@
 
     <div id="game-over" class="hidden landing-page">
         <div class="landing-title">
-            <span class="landing-word">Game</span>
-            <span class="landing-word">Over</span>
+            <span class="pallet-highlight">Game</span>
+            <span class="pallet-highlight">Over</span>
         </div>
         <p id="game-over-message"></p>
         <div class="button" id="restart-game">
